Added Django Google Sheets integration
Data retrieval waiting on the sheets pull request

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,3 +2,5 @@
 <h3> Get the sleep you need! </h3>
 
 <a href = "{% url 'survey' %}">Get Started</a>
+
+<a href = "{% url 'data' %}">View my sleep</a>
