Added authentication, not perfect.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,6 @@
 <h3> Get the sleep you need! </h3>
 
 <a href = "{% url 'survey' %}">Get Started</a>
-
+<a href = "{% url 'login' %}">Login</a>
+<a href = "{% url 'signup'%}">Create Account</a>
 <a href = "{% url 'data' %}">View my sleep</a>
