--- a/templates/success.html
+++ b/templates/success.html
@@ -19,20 +19,6 @@
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
-  <script>
-        {% block jquery %}
-          var endpoint = '/api/data'
-
-          $.ajax({
-            method: "GET",
-            url: endpoint,
-            success:function(data){
-              console.log(data.me)
-            }
-          })
-
-        {% endblock %}
-      </script>
 
 </head>
 
@@ -474,7 +460,8 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="chart-area">
-                    <canvas id="myAreaChart"></canvas>
+                      <canvas id="myAreaChart" width="400" height="400"></canvas>
+                      
                   </div>
                 </div>
               </div>
@@ -502,7 +489,7 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="chart-pie pt-4 pb-2">
-                    <canvas id="myPieChart"></canvas>
+                    <canvas id="myChart"></canvas>
                   </div>
                   <div class="mt-4 text-center small">
                     <span class="mr-2">
@@ -696,11 +683,11 @@
   <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
   <!-- Page level plugins -->
-  <script src="{% static 'vendor/char.js/Chart.min.js' %}"></script>
+  <script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
 
   <!-- Page level custom scripts -->
   <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
-  <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
+
 
 </body>
 
